@@ -6,7 +6,10 @@ package com.dragontalker.java;
  * 设置方法区大小参数的默认值
  *
  * JDK8及以后:
- * -XX:MetaspaceSize=100m
+ * -XX:MetaspaceSize=100m -XX:MaxMetaspaceSize=100m
+ *
+ * JDK7及以前:
+ * -XX:PermSize=100m -XX:MaxPermSize=100m
  */
 public class MethodAreaDemo {
     public static void main(String[] args) {
